updating day 1